@@ -15,720 +15,591 @@
  */
 package com.google.auto.value.processor;
 
+import static com.google.auto.common.GeneratedAnnotations.generatedAnnotation;
 import static com.google.auto.common.MoreElements.getLocalAndInheritedMethods;
+import static com.google.auto.common.MoreElements.getPackage;
+import static com.google.auto.common.MoreElements.isAnnotationPresent;
+import static com.google.auto.value.processor.ClassNames.AUTO_VALUE_NAME;
+import static com.google.auto.value.processor.ClassNames.COPY_ANNOTATIONS_NAME;
+import static com.google.common.collect.Sets.difference;
+import static com.google.common.collect.Sets.intersection;
+import static com.google.common.collect.Sets.union;
+import static java.util.stream.Collectors.joining;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toSet;
 
+import com.google.auto.common.AnnotationMirrors;
 import com.google.auto.common.MoreElements;
+import com.google.auto.common.MoreTypes;
+import com.google.auto.common.Visibility;
 import com.google.auto.service.AutoService;
-import com.google.auto.value.AutoValue;
 import com.google.auto.value.extension.AutoValueExtension;
-import com.google.common.base.Functions;
-import com.google.common.base.Joiner;
-import com.google.common.base.Optional;
+import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Strings;
-import com.google.common.base.Throwables;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableBiMap;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Maps;
-import com.google.common.collect.Sets;
-
-import java.beans.Introspector;
-import java.io.IOException;
-import java.io.Serializable;
-import java.io.Writer;
+import com.google.common.collect.ImmutableSetMultimap;
 import java.lang.annotation.Annotation;
+import java.lang.annotation.Inherited;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.OptionalInt;
+import java.util.ServiceConfigurationError;
 import java.util.ServiceLoader;
 import java.util.Set;
-
-import javax.annotation.Generated;
-import javax.annotation.processing.AbstractProcessor;
+import java.util.regex.Pattern;
 import javax.annotation.processing.ProcessingEnvironment;
 import javax.annotation.processing.Processor;
-import javax.annotation.processing.RoundEnvironment;
-import javax.lang.model.SourceVersion;
+import javax.annotation.processing.SupportedAnnotationTypes;
+import javax.annotation.processing.SupportedOptions;
 import javax.lang.model.element.AnnotationMirror;
+import javax.lang.model.element.AnnotationValue;
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.ExecutableElement;
-import javax.lang.model.element.Modifier;
-import javax.lang.model.element.Name;
+import javax.lang.model.element.QualifiedNameable;
 import javax.lang.model.element.TypeElement;
-import javax.lang.model.element.TypeParameterElement;
-import javax.lang.model.element.VariableElement;
-import javax.lang.model.type.ArrayType;
+import javax.lang.model.type.DeclaredType;
 import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
-import javax.lang.model.util.ElementFilter;
-import javax.lang.model.util.Types;
-import javax.tools.Diagnostic;
-import javax.tools.JavaFileObject;
 
 /**
  * Javac annotation processor (compiler plugin) for value types; user code never references this
  * class.
  *
  * @see AutoValue
+ * @see <a href="https://github.com/google/auto/tree/master/value">AutoValue User's Guide</a>
  * @author Éamonn McManus
  */
 @AutoService(Processor.class)
-public class AutoValueProcessor extends AbstractProcessor {
+@SupportedAnnotationTypes(AUTO_VALUE_NAME)
+@SupportedOptions("com.google.auto.value.OmitIdentifiers")
+public class AutoValueProcessor extends AutoValueOrOneOfProcessor {
   public AutoValueProcessor() {
-    this(ServiceLoader.load(AutoValueExtension.class, AutoValueProcessor.class.getClassLoader()));
+    this(AutoValueProcessor.class.getClassLoader());
   }
 
-  /* testing */ AutoValueProcessor(Iterable<? extends AutoValueExtension> extensions) {
-    this.extensions = extensions;
+  @VisibleForTesting
+  AutoValueProcessor(ClassLoader loaderForExtensions) {
+    super(AUTO_VALUE_NAME);
+    this.extensions = null;
+    this.loaderForExtensions = loaderForExtensions;
   }
 
-  @Override
-  public Set<String> getSupportedAnnotationTypes() {
-    return ImmutableSet.of(AutoValue.class.getName());
+  @VisibleForTesting
+  public AutoValueProcessor(Iterable<? extends AutoValueExtension> extensions) {
+    super(AUTO_VALUE_NAME);
+    this.extensions = ImmutableList.<AutoValueExtension>copyOf(extensions);
+    this.loaderForExtensions = null;
   }
-
-  @Override
-  public SourceVersion getSupportedSourceVersion() {
-    return SourceVersion.latestSupported();
-  }
-
-  private ErrorReporter errorReporter;
 
   /**
-   * Qualified names of {@code @AutoValue} classes that we attempted to process but had to abandon
-   * because we needed other types that they referenced and those other types were missing.
+   * Used to test whether a fully-qualified name is AutoValue.class.getCanonicalName() or one of its
+   * nested annotations.
    */
-  private final List<String> deferredTypeNames = new ArrayList<String>();
+  private static final Pattern AUTO_VALUE_CLASSNAME_PATTERN =
+      Pattern.compile(Pattern.quote(AUTO_VALUE_NAME) + "(\\..*)?");
 
-  private Iterable<? extends AutoValueExtension> extensions;
+  // Depending on how this AutoValueProcessor was constructed, we might already have a list of
+  // extensions when init() is run, or, if `extensions` is null, we have a ClassLoader that will be
+  // used to get the list using the ServiceLoader API.
+  private ImmutableList<AutoValueExtension> extensions;
+  private final ClassLoader loaderForExtensions;
 
   @Override
   public synchronized void init(ProcessingEnvironment processingEnv) {
     super.init(processingEnv);
-    errorReporter = new ErrorReporter(processingEnv);
-  }
 
-  @Override
-  public boolean process(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv) {
-    List<TypeElement> deferredTypes = new ArrayList<TypeElement>();
-    for (String deferred : deferredTypeNames) {
-      deferredTypes.add(processingEnv.getElementUtils().getTypeElement(deferred));
-    }
-    if (roundEnv.processingOver()) {
-      // This means that the previous round didn't generate any new sources, so we can't have found
-      // any new instances of @AutoValue; and we can't have any new types that are the reason a type
-      // was in deferredTypes.
-      for (TypeElement type : deferredTypes) {
-        errorReporter.reportError("Did not generate @AutoValue class for " + type.getQualifiedName()
-            + " because it references undefined types", type);
-      }
-      return false;
-    }
-    Collection<? extends Element> annotatedElements =
-        roundEnv.getElementsAnnotatedWith(AutoValue.class);
-    List<TypeElement> types = new ImmutableList.Builder<TypeElement>()
-        .addAll(deferredTypes)
-        .addAll(ElementFilter.typesIn(annotatedElements))
-        .build();
-    deferredTypeNames.clear();
-    for (TypeElement type : types) {
+    if (extensions == null) {
       try {
-        processType(type);
-      } catch (AbortProcessingException e) {
-        // We abandoned this type; continue with the next.
-      } catch (MissingTypeException e) {
-        // We abandoned this type, but only because we needed another type that it references and
-        // that other type was missing. It is possible that the missing type will be generated by
-        // further annotation processing, so we will try again on the next round (perhaps failing
-        // again and adding it back to the list). We save the name of the @AutoValue type rather
-        // than its TypeElement because it is not guaranteed that it will be represented by
-        // the same TypeElement on the next round.
-        deferredTypeNames.add(type.getQualifiedName().toString());
-      } catch (RuntimeException e) {
-        // Don't propagate this exception, which will confusingly crash the compiler.
-        // Instead, report a compiler error with the stack trace.
-        String trace = Throwables.getStackTraceAsString(e);
-        errorReporter.reportError("@AutoValue processor threw an exception: " + trace, type);
+        extensions = ImmutableList.copyOf(
+            ServiceLoader.load(AutoValueExtension.class, loaderForExtensions));
+        // ServiceLoader.load returns a lazily-evaluated Iterable, so evaluate it eagerly now
+        // to discover any exceptions.
+      } catch (Throwable t) {
+        StringBuilder warning = new StringBuilder();
+        warning.append(
+            "An exception occurred while looking for AutoValue extensions. "
+                + "No extensions will function.");
+        if (t instanceof ServiceConfigurationError) {
+          warning.append(" This may be due to a corrupt jar file in the compiler's classpath.");
+        }
+        warning.append(" Exception: ").append(t);
+        errorReporter().reportWarning(warning.toString(), null);
+        extensions = ImmutableList.of();
       }
     }
-    return false;  // never claim annotation, because who knows what other processors want?
   }
 
-  private String generatedClassName(TypeElement type, String prefix) {
-    String name = type.getSimpleName().toString();
-    while (type.getEnclosingElement() instanceof TypeElement) {
-      type = (TypeElement) type.getEnclosingElement();
-      name = type.getSimpleName() + "_" + name;
-    }
-    String pkg = TypeSimplifier.packageNameOf(type);
-    String dot = pkg.isEmpty() ? "" : ".";
-    return pkg + dot + prefix + name;
-  }
-
-  private String generatedSubclassName(TypeElement type, int depth) {
+  private static String generatedSubclassName(TypeElement type, int depth) {
     return generatedClassName(type, Strings.repeat("$", depth) + "AutoValue_");
   }
 
-  /**
-   * A property of an {@code @AutoValue} class, defined by one of its abstract methods.
-   * An instance of this class is made available to the Velocity template engine for
-   * each property. The public methods of this class define JavaBeans-style properties
-   * that are accessible from templates. For example {@link #getType()} means we can
-   * write {@code $p.type} for a Velocity variable {@code $p} that is a {@code Property}.
-   */
-  public static class Property {
-    private final String name;
-    private final String identifier;
-    private final ExecutableElement method;
-    private final String type;
-    private final ImmutableList<String> annotations;
-
-    Property(
-        String name,
-        String identifier,
-        ExecutableElement method,
-        String type,
-        TypeSimplifier typeSimplifier) {
-      this.name = name;
-      this.identifier = identifier;
-      this.method = method;
-      this.type = type;
-      this.annotations = buildAnnotations(typeSimplifier);
-    }
-
-    private ImmutableList<String> buildAnnotations(TypeSimplifier typeSimplifier) {
-      ImmutableList.Builder<String> builder = ImmutableList.builder();
-
-      for (AnnotationMirror annotationMirror : method.getAnnotationMirrors()) {
-        TypeElement annotationElement =
-            (TypeElement) annotationMirror.getAnnotationType().asElement();
-        if (annotationElement.getQualifiedName().toString().equals(Override.class.getName())) {
-          // Don't copy @Override if present, since we will be adding our own @Override in the
-          // implementation.
-          continue;
-        }
-        AnnotationOutput annotationOutput = new AnnotationOutput(typeSimplifier);
-        builder.add(annotationOutput.sourceFormForAnnotation(annotationMirror));
-      }
-
-      return builder.build();
-    }
-
-    /**
-     * Returns the name of the property as it should be used when declaring identifiers (fields and
-     * parameters). If the original getter method was {@code foo()} then this will be {@code foo}.
-     * If it was {@code getFoo()} then it will be {@code foo}. If it was {@code getPackage()} then
-     * it will be something like {@code package0}, since {@code package} is a reserved word.
-     */
-    @Override
-    public String toString() {
-      return identifier;
-    }
-
-    /**
-     * Returns the name of the property as it should be used in strings visible to users. This is
-     * usually the same as {@code toString()}, except that if we had to use an identifier like
-     * "package0" because "package" is a reserved word, the name here will be the original
-     * "package".
-     */
-    public String getName() {
-      return name;
-    }
-
-    /**
-     * Returns the name of the getter method for this property as defined by the {@code @AutoValue}
-     * class. For property {@code foo}, this will be {@code foo} or {@code getFoo} or {@code isFoo}.
-     */
-    public String getGetter() {
-      return method.getSimpleName().toString();
-    }
-
-    TypeElement getOwner() {
-      return (TypeElement) method.getEnclosingElement();
-    }
-
-    public TypeMirror getTypeMirror() {
-      return method.getReturnType();
-    }
-
-    public String getType() {
-      return type;
-    }
-
-    public TypeKind getKind() {
-      return method.getReturnType().getKind();
-    }
-
-    public List<String> getAnnotations() {
-      return annotations;
-    }
-
-    /**
-     * Returns the string to use as an annotation to indicate the nullability of this property.
-     * It is either the empty string, if the property is not nullable, or an annotation string
-     * with a trailing space, such as {@code "@Nullable "} or {@code "@javax.annotation.Nullable "}.
-     */
-    public String getNullableAnnotation() {
-      for (String annotationString : annotations) {
-        if (annotationString.equals("@Nullable") || annotationString.endsWith(".Nullable")) {
-          return annotationString + " ";
-        }
-      }
-      return "";
-    }
-
-    public boolean isNullable() {
-      return !getNullableAnnotation().isEmpty();
-    }
-
-    public String getAccess() {
-      Set<Modifier> mods = method.getModifiers();
-      if (mods.contains(Modifier.PUBLIC)) {
-        return "public ";
-      } else if (mods.contains(Modifier.PROTECTED)) {
-        return "protected ";
-      } else {
-        return "";
-      }
-    }
-
-    @Override
-    public boolean equals(Object obj) {
-      return obj instanceof Property && ((Property) obj).method.equals(method);
-    }
-
-    @Override
-    public int hashCode() {
-      return method.hashCode();
-    }
-  }
-
-  private static boolean isJavaLangObject(TypeElement type) {
-    return type.getSuperclass().getKind() == TypeKind.NONE && type.getKind() == ElementKind.CLASS;
-  }
-
-  private enum ObjectMethodToOverride {
-    NONE, TO_STRING, EQUALS, HASH_CODE
-  }
-
-  private static ObjectMethodToOverride objectMethodToOverride(ExecutableElement method) {
-    String name = method.getSimpleName().toString();
-    switch (method.getParameters().size()) {
-      case 0:
-        if (name.equals("toString")) {
-          return ObjectMethodToOverride.TO_STRING;
-        } else if (name.equals("hashCode")) {
-          return ObjectMethodToOverride.HASH_CODE;
-        }
-        break;
-      case 1:
-        if (name.equals("equals")
-            && method.getParameters().get(0).asType().toString().equals("java.lang.Object")) {
-          return ObjectMethodToOverride.EQUALS;
-        }
-        break;
-    }
-    return ObjectMethodToOverride.NONE;
-  }
-
-  private void processType(TypeElement type) {
-    AutoValue autoValue = type.getAnnotation(AutoValue.class);
-    if (autoValue == null) {
+  @Override
+  void processType(TypeElement type) {
+    if (!hasAnnotationMirror(type, AUTO_VALUE_NAME)) {
       // This shouldn't happen unless the compilation environment is buggy,
       // but it has happened in the past and can crash the compiler.
-      errorReporter.abortWithError("annotation processor for @AutoValue was invoked with a type"
+      errorReporter().abortWithError("annotation processor for @AutoValue was invoked with a type"
           + " that does not have that annotation; this is probably a compiler bug", type);
     }
     if (type.getKind() != ElementKind.CLASS) {
-      errorReporter.abortWithError(
-          "@" + AutoValue.class.getName() + " only applies to classes", type);
+      errorReporter().abortWithError("@AutoValue only applies to classes", type);
     }
     if (ancestorIsAutoValue(type)) {
-      errorReporter.abortWithError("One @AutoValue class may not extend another", type);
+      errorReporter().abortWithError("One @AutoValue class may not extend another", type);
     }
     if (implementsAnnotation(type)) {
-      errorReporter.abortWithError("@AutoValue may not be used to implement an annotation"
+      errorReporter().abortWithError("@AutoValue may not be used to implement an annotation"
           + " interface; try using @AutoAnnotation instead", type);
     }
+    checkModifiersIfNested(type);
 
-    ImmutableSet<ExecutableElement> methods =
-        getLocalAndInheritedMethods(type, processingEnv.getElementUtils());
-    ImmutableSet<ExecutableElement> methodsToImplement = methodsToImplement(type, methods);
+    // We are going to classify the methods of the @AutoValue class into several categories.
+    // This covers the methods in the class itself and the ones it inherits from supertypes.
+    // First, the only concrete (non-abstract) methods we are interested in are overrides of
+    // Object methods (equals, hashCode, toString), which signal that we should not generate
+    // an implementation of those methods.
+    // Then, each abstract method is one of the following:
+    // (1) A property getter, like "abstract String foo()" or "abstract String getFoo()".
+    // (2) A toBuilder() method, which is any abstract no-arg method returning the Builder for
+    //     this @AutoValue class.
+    // (3) An abstract method that will be consumed by an extension, such as
+    //     Parcelable.describeContents() or Parcelable.writeToParcel(Parcel, int).
+    // The describeContents() example shows a quirk here: initially we will identify it as a
+    // property, which means that we need to reconstruct the list of properties after allowing
+    // extensions to consume abstract methods.
+    // If there are abstract methods that don't fit any of the categories above, that is an error
+    // which we signal explicitly to avoid confusion.
 
-    String fqExtClass = TypeSimplifier.classNameOf(type);
-    List<AutoValueExtension> appliedExtensions = new ArrayList<AutoValueExtension>();
-    AutoValueExtension.Context context = makeExtensionContext(type, methodsToImplement);
-    for (AutoValueExtension extension : extensions) {
-      if (extension.applicable(context)) {
-        if (extension.mustBeAtEnd(context)) {
-          appliedExtensions.add(0, extension);
-        } else {
-          appliedExtensions.add(extension);
-        }
-      }
+    ImmutableSet<ExecutableElement> methods = getLocalAndInheritedMethods(
+        type, processingEnv.getTypeUtils(), processingEnv.getElementUtils());
+    ImmutableSet<ExecutableElement> abstractMethods = abstractMethodsIn(methods);
+
+    BuilderSpec builderSpec = new BuilderSpec(type, processingEnv, errorReporter());
+    Optional<BuilderSpec.Builder> builder = builderSpec.getBuilder();
+    ImmutableSet<ExecutableElement> toBuilderMethods;
+    if (builder.isPresent()) {
+      toBuilderMethods = builder.get().toBuilderMethods(typeUtils(), abstractMethods);
+    } else {
+      toBuilderMethods = ImmutableSet.of();
     }
 
+    ImmutableSet<ExecutableElement> propertyMethods =
+        propertyMethodsIn(immutableSetDifference(abstractMethods, toBuilderMethods));
+    ImmutableBiMap<String, ExecutableElement> properties = propertyNameToMethodMap(propertyMethods);
+
+    ExtensionContext context =
+        new ExtensionContext(processingEnv, type, properties, abstractMethods);
+    ImmutableList<AutoValueExtension> applicableExtensions = applicableExtensions(type, context);
+    ImmutableSet<ExecutableElement> consumedMethods = methodsConsumedByExtensions(
+        type, applicableExtensions, context, abstractMethods, properties);
+
+    if (!consumedMethods.isEmpty()) {
+      ImmutableSet<ExecutableElement> allAbstractMethods = abstractMethods;
+      abstractMethods = immutableSetDifference(abstractMethods, consumedMethods);
+      toBuilderMethods = immutableSetDifference(toBuilderMethods, consumedMethods);
+      propertyMethods =
+          propertyMethodsIn(immutableSetDifference(abstractMethods, toBuilderMethods));
+      properties = propertyNameToMethodMap(propertyMethods);
+      context = new ExtensionContext(processingEnv, type, properties, allAbstractMethods);
+    }
+
+    boolean extensionsPresent = !applicableExtensions.isEmpty();
+    validateMethods(type, abstractMethods, toBuilderMethods, propertyMethods, extensionsPresent);
+
     String finalSubclass = generatedSubclassName(type, 0);
-    String subclass = generatedSubclassName(type, appliedExtensions.size());
     AutoValueTemplateVars vars = new AutoValueTemplateVars();
     vars.pkg = TypeSimplifier.packageNameOf(type);
-    vars.origClass = fqExtClass;
+    vars.origClass = TypeSimplifier.classNameOf(type);
     vars.simpleClassName = TypeSimplifier.simpleNameOf(vars.origClass);
-    vars.subclass = TypeSimplifier.simpleNameOf(subclass);
     vars.finalSubclass = TypeSimplifier.simpleNameOf(finalSubclass);
-    vars.isFinal = appliedExtensions.isEmpty();
     vars.types = processingEnv.getTypeUtils();
-    defineVarsForType(type, vars, methods);
+    vars.identifiers =
+        !processingEnv.getOptions().containsKey("com.google.auto.value.OmitIdentifiers");
+    Map<ObjectMethod, ExecutableElement> methodsToGenerate =
+        determineObjectMethodsToGenerate(methods);
+    vars.toString = methodsToGenerate.containsKey(ObjectMethod.TO_STRING);
+    vars.hashCode = methodsToGenerate.containsKey(ObjectMethod.HASH_CODE);
+    vars.equals = methodsToGenerate.containsKey(ObjectMethod.EQUALS);
+    vars.equalsParameterType = equalsParameterType(methodsToGenerate);
+    defineVarsForType(type, vars, toBuilderMethods, propertyMethods, builder);
+
+    // Only copy annotations from a class if it has @AutoValue.CopyAnnotations.
+    if (hasAnnotationMirror(type, COPY_ANNOTATIONS_NAME)) {
+      Set<String> excludedAnnotations =
+          union(getExcludedClasses(type), getAnnotationsMarkedWithInherited(type));
+
+      vars.annotations = copyAnnotations(type, type, excludedAnnotations);
+    } else {
+      vars.annotations = ImmutableList.of();
+    }
+
     GwtCompatibility gwtCompatibility = new GwtCompatibility(type);
     vars.gwtCompatibleAnnotation = gwtCompatibility.gwtCompatibleAnnotationString();
+
+    int subclassDepth = writeExtensions(type, context, applicableExtensions);
+    String subclass = generatedSubclassName(type, subclassDepth);
+    vars.subclass = TypeSimplifier.simpleNameOf(subclass);
+    vars.isFinal = (subclassDepth == 0);
+
     String text = vars.toText();
+    text = TypeEncoder.decode(text, processingEnv, vars.pkg, type.asType());
     text = Reformatter.fixup(text);
     writeSourceFile(subclass, text, type);
     GwtSerialization gwtSerialization = new GwtSerialization(gwtCompatibility, processingEnv, type);
     gwtSerialization.maybeWriteGwtSerializer(vars);
+  }
 
-    String extClass = TypeSimplifier.simpleNameOf(subclass);
-    for (int i = appliedExtensions.size() - 1; i >= 0; i--) {
-      AutoValueExtension extension = appliedExtensions.remove(i);
-      String fqClassName = generatedSubclassName(type, i);
-      String className = TypeSimplifier.simpleNameOf(fqClassName);
-      boolean isFinal = (i == 0);
-      String source = extension.generateClass(context, className, extClass, isFinal);
-      if (source == null || source.isEmpty()) {
-        errorReporter.reportError("Extension returned no source code.", type);
-        return;
+  /** Implements the semantics of {@code AutoValue.CopyAnnotations}; see its javadoc. */
+  private ImmutableList<String> copyAnnotations(
+      Element autoValueType,
+      Element typeOrMethod,
+      Set<String> excludedAnnotations) {
+    ImmutableList<AnnotationMirror> annotationsToCopy =
+        annotationsToCopy(autoValueType, typeOrMethod, excludedAnnotations);
+    return annotationStrings(annotationsToCopy);
+  }
+
+  /** Implements the semantics of {@code AutoValue.CopyAnnotations}; see its javadoc. */
+  private ImmutableList<AnnotationMirror> annotationsToCopy(
+      Element autoValueType,
+      Element typeOrMethod,
+      Set<String> excludedAnnotations) {
+    ImmutableList.Builder<AnnotationMirror> result = ImmutableList.builder();
+    for (AnnotationMirror annotation : typeOrMethod.getAnnotationMirrors()) {
+      String annotationFqName = getAnnotationFqName(annotation);
+      // To be included, the annotation should not be @AutoValue or any of its nested annotations,
+      // and it should not be in the excludedAnnotations set.
+      if (!AUTO_VALUE_CLASSNAME_PATTERN.matcher(annotationFqName).matches()
+          && !excludedAnnotations.contains(annotationFqName)
+          && annotationVisibleFrom(annotation, autoValueType)) {
+        result.add(annotation);
       }
-      source = Reformatter.fixup(source);
-      writeSourceFile(fqClassName, source, type);
+    }
 
-      extClass = className;
+    return result.build();
+  }
+
+  private boolean annotationVisibleFrom(AnnotationMirror annotation, Element from) {
+    Element annotationElement = annotation.getAnnotationType().asElement();
+    Visibility visibility = Visibility.effectiveVisibilityOfElement(annotationElement);
+    switch (visibility) {
+      case PUBLIC:
+        return true;
+      case PROTECTED:
+        // If the annotation is protected, it must be inside another class, call it C. If our
+        // @AutoValue class is Foo then, for the annotation to be visible, either Foo must be in the
+        // same package as C or Foo must be a subclass of C. If the annotation is visible from Foo
+        // then it is also visible from our generated subclass AutoValue_Foo.
+        // The protected case only applies to method annotations. An annotation on the AutoValue_Foo
+        // class itself can't be protected, even if AutoValue_Foo ultimately inherits from the
+        // class that defines the annotation. The JLS says "Access is permitted only within the
+        // body of a subclass":
+        // https://docs.oracle.com/javase/specs/jls/se8/html/jls-6.html#jls-6.6.2.1
+        // AutoValue_Foo is a top-level class, so an annotation on it cannot be in the body of a
+        // subclass of anything.
+        return getPackage(annotationElement).equals(getPackage(from))
+            || typeUtils().isSubtype(
+                from.asType(), annotationElement.getEnclosingElement().asType());
+      case DEFAULT:
+        return getPackage(annotationElement).equals(getPackage(from));
+      default:
+        return false;
     }
   }
 
-  private AutoValueExtension.Context makeExtensionContext(
-      final TypeElement type, final Iterable<ExecutableElement> methods) {
-    return new AutoValueExtension.Context() {
-
-      @Override public ProcessingEnvironment processingEnvironment() {
-        return processingEnv;
-      }
-
-      @Override public String packageName() {
-        return TypeSimplifier.packageNameOf(type);
-      }
-
-      @Override public TypeElement autoValueClass() {
-        return type;
-      }
-
-      @Override public Map<String, ExecutableElement> properties() {
-        return propertyNameToMethodMap(methods);
-      }
-    };
+  /**
+   * Returns the fully-qualified name of an annotation-mirror, e.g.
+   * "com.google.auto.value.AutoValue".
+   */
+  private static String getAnnotationFqName(AnnotationMirror annotation) {
+    return ((QualifiedNameable) annotation.getAnnotationType().asElement())
+        .getQualifiedName().toString();
   }
 
-  private void defineVarsForType(TypeElement type, AutoValueTemplateVars vars,
-                                 Set<ExecutableElement> methods) {
-    Types typeUtils = processingEnv.getTypeUtils();
-    determineObjectMethodsToGenerate(methods, vars);
-    ImmutableSet<ExecutableElement> methodsToImplement = methodsToImplement(type, methods);
-    Set<TypeMirror> types = new TypeMirrorSet();
-    types.addAll(returnTypesOf(methodsToImplement));
-    TypeElement generatedTypeElement =
-        processingEnv.getElementUtils().getTypeElement(Generated.class.getName());
-    if (generatedTypeElement != null) {
-      types.add(generatedTypeElement.asType());
+  /**
+   * Returns the contents of the {@code AutoValue.CopyAnnotations.exclude} element, as a list of
+   * strings that are fully-qualified class names.
+   */
+  private Set<String> getExcludedClasses(Element element) {
+    Optional<AnnotationMirror> maybeAnnotation =
+        getAnnotationMirror(element, COPY_ANNOTATIONS_NAME);
+    if (!maybeAnnotation.isPresent()) {
+      return ImmutableSet.of();
     }
-    TypeMirror javaUtilArrays = getTypeMirror(Arrays.class);
-    if (containsArrayType(types)) {
-      // If there are array properties then we will be referencing java.util.Arrays.
-      // Arrange to import it unless that would introduce ambiguity.
-      types.add(javaUtilArrays);
+
+    @SuppressWarnings("unchecked")
+    List<AnnotationValue> excludedClasses = (List<AnnotationValue>)
+        AnnotationMirrors.getAnnotationValue(maybeAnnotation.get(), "exclude").getValue();
+    return excludedClasses
+        .stream()
+        .map(annotationValue -> MoreTypes.asTypeElement((DeclaredType) annotationValue.getValue()))
+        .map(typeElement -> typeElement.getQualifiedName().toString())
+        .collect(toSet());
+  }
+
+  private static Set<String> getAnnotationsMarkedWithInherited(Element element) {
+    return element.getAnnotationMirrors().stream()
+        .filter(a -> isAnnotationPresent(a.getAnnotationType().asElement(), Inherited.class))
+        .map(a -> getAnnotationFqName(a))
+        .collect(toSet());
+  }
+
+  // Invokes each of the given extensions to generate its subclass, and returns the number of
+  // hierarchy classes that extensions generated. This number is then the number of $ characters
+  // that should precede the name of the AutoValue implementation class.
+  // Assume the @AutoValue class is com.example.Foo.Bar. Then if there are no
+  // extensions the returned value will be 0, so the AutoValue implementation will be
+  // com.example.AutoValue_Foo_Bar. If there is one extension, it will be asked to
+  // generate AutoValue_Foo_Bar with parent $AutoValue_Foo_Bar. If it does so (returns
+  // non-null) then the returned value will be 1, so the AutoValue implementation will be
+  // com.example.$AutoValue_Foo_Bar. Otherwise, the returned value will still be 0. Likewise,
+  // if there is a second extension and both extensions return non-null, the first one will
+  // generate AutoValue_Foo_Bar with parent $AutoValue_Foo_Bar, the second will generate
+  // $AutoValue_Foo_Bar with parent $$AutoValue_Foo_Bar, and the returned value will be 2 for
+  // com.example.$$AutoValue_Foo_Bar.
+  private int writeExtensions(
+      TypeElement type,
+      ExtensionContext context,
+      ImmutableList<AutoValueExtension> applicableExtensions) {
+    int writtenSoFar = 0;
+    for (AutoValueExtension extension : applicableExtensions) {
+      String parentFqName = generatedSubclassName(type, writtenSoFar + 1);
+      String parentSimpleName = TypeSimplifier.simpleNameOf(parentFqName);
+      String classFqName = generatedSubclassName(type, writtenSoFar);
+      String classSimpleName = TypeSimplifier.simpleNameOf(classFqName);
+      boolean isFinal = (writtenSoFar == 0);
+      String source = extension.generateClass(context, classSimpleName, parentSimpleName, isFinal);
+      if (source != null) {
+        source = Reformatter.fixup(source);
+        writeSourceFile(classFqName, source, type);
+        writtenSoFar++;
+      }
     }
-    BuilderSpec builderSpec = new BuilderSpec(type, processingEnv, errorReporter);
-    Optional<BuilderSpec.Builder> builder = builderSpec.getBuilder();
-    ImmutableSet<ExecutableElement> toBuilderMethods;
-    if (builder.isPresent()) {
-      toBuilderMethods = builder.get().toBuilderMethods(typeUtils, methodsToImplement);
-      types.addAll(builder.get().referencedTypes());
-    } else {
-      toBuilderMethods = ImmutableSet.of();
+    return writtenSoFar;
+  }
+
+  private ImmutableList<AutoValueExtension> applicableExtensions(
+      TypeElement type, ExtensionContext context) {
+    List<AutoValueExtension> applicableExtensions = new ArrayList<>();
+    List<AutoValueExtension> finalExtensions = new ArrayList<>();
+    for (AutoValueExtension extension : extensions) {
+      if (extension.applicable(context)) {
+        if (extension.mustBeFinal(context)) {
+          finalExtensions.add(extension);
+        } else {
+          applicableExtensions.add(extension);
+        }
+      }
     }
+    switch (finalExtensions.size()) {
+      case 0:
+        break;
+      case 1:
+        applicableExtensions.add(0, finalExtensions.get(0));
+        break;
+      default:
+        errorReporter().reportError(
+            "More than one extension wants to generate the final class: "
+                + finalExtensions.stream().map(this::extensionName).collect(joining(", ")),
+            type);
+        break;
+    }
+    return ImmutableList.copyOf(applicableExtensions);
+  }
+
+  private ImmutableSet<ExecutableElement> methodsConsumedByExtensions(
+      TypeElement type,
+      ImmutableList<AutoValueExtension> applicableExtensions,
+      ExtensionContext context,
+      ImmutableSet<ExecutableElement> abstractMethods,
+      ImmutableBiMap<String, ExecutableElement> properties) {
+    Set<ExecutableElement> consumed = new HashSet<>();
+    for (AutoValueExtension extension : applicableExtensions) {
+      Set<ExecutableElement> consumedHere = new HashSet<>();
+      for (String consumedProperty : extension.consumeProperties(context)) {
+        ExecutableElement propertyMethod = properties.get(consumedProperty);
+        if (propertyMethod == null) {
+          errorReporter().reportError(
+              "Extension " + extensionName(extension)
+                  + " wants to consume a property that does not exist: " + consumedProperty,
+              type);
+        } else {
+          consumedHere.add(propertyMethod);
+        }
+      }
+      for (ExecutableElement consumedMethod : extension.consumeMethods(context)) {
+        if (!abstractMethods.contains(consumedMethod)) {
+          errorReporter().reportError(
+              "Extension " + extensionName(extension)
+                  + " wants to consume a method that is not one of the abstract methods in this"
+                  + " class: " + consumedMethod,
+              type);
+        } else {
+          consumedHere.add(consumedMethod);
+        }
+      }
+      for (ExecutableElement repeat : intersection(consumed, consumedHere)) {
+        errorReporter().reportError(
+            "Extension " + extensionName(extension) + " wants to consume a method that was already"
+                + " consumed by another extension", repeat);
+      }
+      consumed.addAll(consumedHere);
+    }
+    return ImmutableSet.copyOf(consumed);
+  }
+
+  private void validateMethods(
+      TypeElement type,
+      ImmutableSet<ExecutableElement> abstractMethods,
+      ImmutableSet<ExecutableElement> toBuilderMethods,
+      ImmutableSet<ExecutableElement> propertyMethods,
+      boolean extensionsPresent) {
+    for (ExecutableElement method : abstractMethods) {
+      if (propertyMethods.contains(method)) {
+        checkReturnType(type, method);
+      } else if (!toBuilderMethods.contains(method)
+          && objectMethodToOverride(method) == ObjectMethod.NONE) {
+        // This could reasonably be an error, were it not for an Eclipse bug in
+        // ElementUtils.override that sometimes fails to recognize that one method overrides
+        // another, and therefore leaves us with both an abstract method and the subclass method
+        // that overrides it. This shows up in AutoValueTest.LukesBase for example.
+        String message = "Abstract method is neither a property getter nor a Builder converter";
+        if (extensionsPresent) {
+          message += ", and no extension consumed it";
+        }
+        errorReporter().reportWarning(message, method);
+      }
+    }
+    errorReporter().abortIfAnyError();
+  }
+
+  private String extensionName(AutoValueExtension extension) {
+    return extension.getClass().getName();
+  }
+
+  private void defineVarsForType(
+      TypeElement type,
+      AutoValueTemplateVars vars,
+      ImmutableSet<ExecutableElement> toBuilderMethods,
+      ImmutableSet<ExecutableElement> propertyMethods,
+      Optional<BuilderSpec.Builder> builder) {
+    // We can't use ImmutableList.toImmutableList() for obscure Google-internal reasons.
     vars.toBuilderMethods =
-        FluentIterable.from(toBuilderMethods).transform(SimpleNameFunction.INSTANCE).toList();
-    Set<ExecutableElement> propertyMethods = Sets.difference(methodsToImplement, toBuilderMethods);
-    types.addAll(allMethodAnnotationTypes(propertyMethods));
-    String pkg = TypeSimplifier.packageNameOf(type);
-    TypeSimplifier typeSimplifier = new TypeSimplifier(typeUtils, pkg, types, type.asType());
-    vars.imports = typeSimplifier.typesToImport();
-    vars.generated = generatedTypeElement == null
-        ? ""
-        : typeSimplifier.simplify(generatedTypeElement.asType());
-    vars.arrays = typeSimplifier.simplify(javaUtilArrays);
+        ImmutableList.copyOf(toBuilderMethods.stream().map(SimpleMethod::new).collect(toList()));
+    vars.generated =
+        generatedAnnotation(processingEnv.getElementUtils(), processingEnv.getSourceVersion())
+            .map(annotation -> TypeEncoder.encode(annotation.asType()))
+            .orElse("");
     ImmutableBiMap<ExecutableElement, String> methodToPropertyName =
-        methodToPropertyNameMap(propertyMethods);
-    Map<ExecutableElement, String> methodToIdentifier =
-        Maps.newLinkedHashMap(methodToPropertyName);
-    fixReservedIdentifiers(methodToIdentifier);
-    List<Property> props = new ArrayList<Property>();
-    for (ExecutableElement method : propertyMethods) {
-      String propertyType = typeSimplifier.simplify(method.getReturnType());
-      String propertyName = methodToPropertyName.get(method);
-      String identifier = methodToIdentifier.get(method);
-      props.add(new Property(propertyName, identifier, method, propertyType, typeSimplifier));
-    }
-    // If we are running from Eclipse, undo the work of its compiler which sorts methods.
-    eclipseHack().reorderProperties(props);
-    vars.props = ImmutableSet.copyOf(props);
+        propertyNameToMethodMap(propertyMethods).inverse();
+    ImmutableMap<ExecutableElement, ImmutableList<AnnotationMirror>> annotatedPropertyMethods =
+        propertyMethodAnnotationMap(type, propertyMethods);
+    vars.props = propertySet(type, annotatedPropertyMethods);
     vars.serialVersionUID = getSerialVersionUID(type);
-    vars.formalTypes = typeSimplifier.formalTypeParametersString(type);
+    vars.formalTypes = TypeEncoder.formalTypeParametersString(type);
     vars.actualTypes = TypeSimplifier.actualTypeParametersString(type);
     vars.wildcardTypes = wildcardTypeParametersString(type);
     // Check for @AutoValue.Builder and add appropriate variables if it is present.
     if (builder.isPresent()) {
-      builder.get().defineVars(vars, typeSimplifier, methodToPropertyName);
+      builder.get().defineVars(vars, methodToPropertyName);
     }
   }
 
-  private ImmutableBiMap<ExecutableElement, String> methodToPropertyNameMap(
-      Iterable<ExecutableElement> propertyMethods) {
-    ImmutableMap.Builder<ExecutableElement, String> builder = ImmutableMap.builder();
-    boolean allGetters = allGetters(propertyMethods);
-    for (ExecutableElement method : propertyMethods) {
-      String methodName = method.getSimpleName().toString();
-      String name = allGetters ? nameWithoutPrefix(methodName) : methodName;
-      builder.put(method, name);
+  private ImmutableMap<ExecutableElement, ImmutableList<AnnotationMirror>>
+      propertyMethodAnnotationMap(
+          TypeElement type, ImmutableSet<ExecutableElement> propertyMethods) {
+    ImmutableSetMultimap<ExecutableElement, String> excludedAnnotationsMap =
+        allMethodExcludedAnnotations(propertyMethods);
+    ImmutableMap.Builder<ExecutableElement, ImmutableList<AnnotationMirror>> builder =
+        ImmutableMap.builder();
+    for (ExecutableElement propertyMethod : propertyMethods) {
+      builder.put(propertyMethod,
+          propertyMethodAnnotations(type, propertyMethod, excludedAnnotationsMap));
     }
-    ImmutableMap<ExecutableElement, String> map = builder.build();
-    if (allGetters) {
-      checkDuplicateGetters(map);
-    }
-    return ImmutableBiMap.copyOf(map);
+    return builder.build();
   }
 
-  private ImmutableBiMap<String, ExecutableElement> propertyNameToMethodMap(
-      Iterable<ExecutableElement> propertyMethods) {
-    ImmutableMap.Builder<String, ExecutableElement> builder = ImmutableMap.builder();
-    boolean allGetters = allGetters(propertyMethods);
-    for (ExecutableElement method : propertyMethods) {
-      String methodName = method.getSimpleName().toString();
-      String name = allGetters ? nameWithoutPrefix(methodName) : methodName;
-      builder.put(name, method);
+  @Override
+  Optional<String> nullableAnnotationForMethod(
+      ExecutableElement propertyMethod, ImmutableList<AnnotationMirror> methodAnnotations) {
+    OptionalInt nullableAnnotationIndex = nullableAnnotationIndex(methodAnnotations);
+    if (nullableAnnotationIndex.isPresent()) {
+      ImmutableList<String> annotations = annotationStrings(methodAnnotations);
+      return Optional.of(annotations.get(nullableAnnotationIndex.getAsInt()));
+    } else {
+      List<? extends AnnotationMirror> typeAnnotations =
+          propertyMethod.getReturnType().getAnnotationMirrors();
+      return
+          nullableAnnotationIndex(typeAnnotations).isPresent()
+              ? Optional.of("")
+              : Optional.empty();
     }
-    ImmutableMap<String, ExecutableElement> map = builder.build();
-    return ImmutableBiMap.copyOf(map);
   }
 
-  private static boolean allGetters(Iterable<ExecutableElement> methods) {
+  private static OptionalInt nullableAnnotationIndex(List<? extends AnnotationMirror> annotations) {
+    for (int i = 0; i < annotations.size(); i++) {
+      if (isNullable(annotations.get(i))) {
+        return OptionalInt.of(i);
+      }
+    }
+    return OptionalInt.empty();
+  }
+
+  private static boolean isNullable(AnnotationMirror annotation) {
+    return annotation.getAnnotationType().asElement().getSimpleName().contentEquals("Nullable");
+  }
+
+  private ImmutableList<AnnotationMirror> propertyMethodAnnotations(
+      TypeElement type,
+      ExecutableElement method,
+      ImmutableSetMultimap<ExecutableElement, String> excludedAnnotationsMap) {
+    ImmutableSet<String> excludedAnnotations =
+        ImmutableSet.<String>builder()
+            .addAll(excludedAnnotationsMap.get(method))
+            .add(Override.class.getCanonicalName())
+            .build();
+
+    // We need to exclude type annotations from the ones being output on the method, since
+    // they will be output as part of the method's return type.
+    Set<String> typeAnnotations = method.getReturnType().getAnnotationMirrors().stream()
+        .map(a -> a.getAnnotationType().asElement())
+        .map(MoreElements::asType)
+        .map(e -> e.getQualifiedName().toString())
+        .collect(toSet());
+    Set<String> excluded = union(excludedAnnotations, typeAnnotations);
+    return annotationsToCopy(type, method, excluded);
+  }
+
+  private ImmutableSetMultimap<ExecutableElement, String> allMethodExcludedAnnotations(
+      Iterable<ExecutableElement> methods) {
+    ImmutableSetMultimap.Builder<ExecutableElement, String> result = ImmutableSetMultimap.builder();
+    for (ExecutableElement method : methods) {
+      result.putAll(method, getExcludedClasses(method));
+    }
+    return result.build();
+  }
+
+  static ImmutableSet<ExecutableElement> prefixedGettersIn(Iterable<ExecutableElement> methods) {
+    ImmutableSet.Builder<ExecutableElement> getters = ImmutableSet.builder();
     for (ExecutableElement method : methods) {
       String name = method.getSimpleName().toString();
       // TODO(emcmanus): decide whether getfoo() (without a capital) is a getter. Currently it is.
       boolean get = name.startsWith("get") && !name.equals("get");
       boolean is = name.startsWith("is") && !name.equals("is")
           && method.getReturnType().getKind() == TypeKind.BOOLEAN;
-      if (!get && !is) {
-        return false;
+      if (get || is) {
+        getters.add(method);
       }
     }
-    return true;
-  }
-
-  private Set<TypeMirror> allMethodAnnotationTypes(Iterable<ExecutableElement> methods) {
-    Set<TypeMirror> annotationTypes = new TypeMirrorSet();
-    for (ExecutableElement method : methods) {
-      for (AnnotationMirror annotationMirror : method.getAnnotationMirrors()) {
-        annotationTypes.add(annotationMirror.getAnnotationType());
-      }
-    }
-    return annotationTypes;
-  }
-
-  private String nameWithoutPrefix(String name) {
-    if (name.startsWith("get")) {
-      name = name.substring(3);
-    } else {
-      assert name.startsWith("is");
-      name = name.substring(2);
-    }
-    return Introspector.decapitalize(name);
-  }
-
-  private void checkDuplicateGetters(Map<ExecutableElement, String> methodToIdentifier) {
-    Set<String> seen = Sets.newHashSet();
-    for (Map.Entry<ExecutableElement, String> entry : methodToIdentifier.entrySet()) {
-      if (!seen.add(entry.getValue())) {
-        errorReporter.reportError(
-            "More than one @AutoValue property called " + entry.getValue(), entry.getKey());
-      }
-    }
-  }
-
-  // If we have a getter called getPackage() then we can't use the identifier "package" to represent
-  // its value since that's a reserved word.
-  private void fixReservedIdentifiers(Map<ExecutableElement, String> methodToIdentifier) {
-    for (Map.Entry<ExecutableElement, String> entry : methodToIdentifier.entrySet()) {
-      if (SourceVersion.isKeyword(entry.getValue())) {
-        entry.setValue(disambiguate(entry.getValue(), methodToIdentifier.values()));
-      }
-    }
-  }
-
-  private String disambiguate(String name, Collection<String> existingNames) {
-    for (int i = 0; ; i++) {
-      String candidate = name + i;
-      if (!existingNames.contains(candidate)) {
-        return candidate;
-      }
-    }
-  }
-
-  private Set<TypeMirror> returnTypesOf(Iterable<ExecutableElement> methods) {
-    Set<TypeMirror> returnTypes = new TypeMirrorSet();
-    for (ExecutableElement method : methods) {
-      returnTypes.add(method.getReturnType());
-    }
-    return returnTypes;
-  }
-
-  private static boolean containsArrayType(Set<TypeMirror> types) {
-    for (TypeMirror type : types) {
-      if (type.getKind() == TypeKind.ARRAY) {
-        return true;
-      }
-    }
-    return false;
-  }
-
-  /**
-   * Given a list of all methods defined in or inherited by a class, sets the equals, hashCode, and
-   * toString fields of vars according as the corresponding methods should be generated.
-   */
-  private static void determineObjectMethodsToGenerate(
-      Set<ExecutableElement> methods, AutoValueTemplateVars vars) {
-    // The defaults here only come into play when an ancestor class doesn't exist.
-    // Compilation will fail in that case, but we don't want it to crash the compiler with
-    // an exception before it does. If all ancestors do exist then we will definitely find
-    // definitions of these three methods (perhaps the ones in Object) so we will overwrite these:
-    vars.equals = false;
-    vars.hashCode = false;
-    vars.toString = false;
-    for (ExecutableElement method : methods) {
-      ObjectMethodToOverride override = objectMethodToOverride(method);
-      boolean canGenerate = method.getModifiers().contains(Modifier.ABSTRACT)
-          || isJavaLangObject((TypeElement) method.getEnclosingElement());
-      switch (override) {
-        case EQUALS:
-          vars.equals = canGenerate;
-          break;
-        case HASH_CODE:
-          vars.hashCode = canGenerate;
-          break;
-        case TO_STRING:
-          vars.toString = canGenerate;
-          break;
-      }
-    }
-  }
-
-  private ImmutableSet<ExecutableElement> methodsToImplement(
-      TypeElement autoValueClass, Set<ExecutableElement> methods) {
-    ImmutableSet.Builder<ExecutableElement> toImplement = ImmutableSet.builder();
-    Set<Name> toImplementNames = Sets.newHashSet();
-    boolean ok = true;
-    for (ExecutableElement method : methods) {
-      if (method.getModifiers().contains(Modifier.ABSTRACT)
-          && objectMethodToOverride(method) == ObjectMethodToOverride.NONE) {
-        if (method.getParameters().isEmpty() && method.getReturnType().getKind() != TypeKind.VOID) {
-          ok &= checkReturnType(autoValueClass, method);
-          if (toImplementNames.add(method.getSimpleName())) {
-            // If an abstract method with the same signature is inherited on more than one path,
-            // we only add it once.
-            toImplement.add(method);
-          }
-        } else {
-          // This could reasonably be an error, were it not for an Eclipse bug in
-          // ElementUtils.override that sometimes fails to recognize that one method overrides
-          // another, and therefore leaves us with both an abstract method and the subclass method
-          // that overrides it. This shows up in AutoValueTest.LukesBase for example.
-          errorReporter.reportWarning("@AutoValue classes cannot have abstract methods other than"
-              + " property getters and Builder converters", method);
-        }
-      }
-    }
-    if (!ok) {
-      throw new AbortProcessingException();
-    }
-    return toImplement.build();
-  }
-
-  private boolean checkReturnType(TypeElement autoValueClass, ExecutableElement getter) {
-    TypeMirror type = getter.getReturnType();
-    if (type.getKind() == TypeKind.ARRAY) {
-      TypeMirror componentType = ((ArrayType) type).getComponentType();
-      if (componentType.getKind().isPrimitive()) {
-        warnAboutPrimitiveArrays(autoValueClass, getter);
-        return true;
-      } else {
-        errorReporter.reportError("An @AutoValue class cannot define an array-valued property"
-            + " unless it is a primitive array", getter);
-        return false;
-      }
-    } else {
-      return true;
-    }
-  }
-
-  private void warnAboutPrimitiveArrays(TypeElement autoValueClass, ExecutableElement getter) {
-    SuppressWarnings suppressWarnings = getter.getAnnotation(SuppressWarnings.class);
-    if (suppressWarnings == null || !Arrays.asList(suppressWarnings.value()).contains("mutable")) {
-      // If the primitive-array property method is defined directly inside the @AutoValue class,
-      // then our error message should point directly to it. But if it is inherited, we don't
-      // want to try to make the error message point to the inherited definition, since that would
-      // be confusing (there is nothing wrong with the definition itself), and won't work if the
-      // inherited class is not being recompiled. Instead, in this case we point to the @AutoValue
-      // class itself, and we include extra text in the error message that shows the full name of
-      // the inherited method.
-      String warning =
-          "An @AutoValue property that is a primitive array returns the original array, "
-              + "which can therefore be modified by the caller. If this OK, you can "
-              + "suppress this warning with @SuppressWarnings(\"mutable\"). Otherwise, you "
-              + "should replace the property with an immutable type, perhaps a simple wrapper "
-              + "around the original array.";
-      boolean sameClass = getter.getEnclosingElement().equals(autoValueClass);
-      if (sameClass) {
-        errorReporter.reportWarning(warning, getter);
-      } else {
-        errorReporter.reportWarning(
-            warning + " Method: " + getter.getEnclosingElement() + "." + getter, autoValueClass);
-      }
-    }
-  }
-
-  private void writeSourceFile(String className, String text, TypeElement originatingType) {
-    try {
-      JavaFileObject sourceFile =
-          processingEnv.getFiler().createSourceFile(className, originatingType);
-      Writer writer = sourceFile.openWriter();
-      try {
-        writer.write(text);
-      } finally {
-        writer.close();
-      }
-    } catch (IOException e) {
-      // This should really be an error, but we make it a warning in the hope of resisting Eclipse
-      // bug https://bugs.eclipse.org/bugs/show_bug.cgi?id=367599. If that bug manifests, we may get
-      // invoked more than once for the same file, so ignoring the ability to overwrite it is the
-      // right thing to do. If we are unable to write for some other reason, we should get a compile
-      // error later because user code will have a reference to the code we were supposed to
-      // generate (new AutoValue_Foo() or whatever) and that reference will be undefined.
-      processingEnv.getMessager().printMessage(Diagnostic.Kind.WARNING,
-          "Could not write generated class " + className + ": " + e);
-    }
+    return getters.build();
   }
 
   private boolean ancestorIsAutoValue(TypeElement type) {
@@ -737,9 +608,8 @@ public class AutoValueProcessor extends AbstractProcessor {
       if (parentMirror.getKind() == TypeKind.NONE) {
         return false;
       }
-      Types typeUtils = processingEnv.getTypeUtils();
-      TypeElement parentElement = (TypeElement) typeUtils.asElement(parentMirror);
-      if (MoreElements.isAnnotationPresent(parentElement, AutoValue.class)) {
+      TypeElement parentElement = (TypeElement) typeUtils().asElement(parentMirror);
+      if (hasAnnotationMirror(parentElement, AUTO_VALUE_NAME)) {
         return true;
       }
       type = parentElement;
@@ -747,55 +617,18 @@ public class AutoValueProcessor extends AbstractProcessor {
   }
 
   private boolean implementsAnnotation(TypeElement type) {
-    Types typeUtils = processingEnv.getTypeUtils();
-    return typeUtils.isAssignable(type.asType(), getTypeMirror(Annotation.class));
-  }
-
-  // Return a string like "1234L" if type instanceof Serializable and defines
-  // serialVersionUID = 1234L, otherwise "".
-  private String getSerialVersionUID(TypeElement type) {
-    Types typeUtils = processingEnv.getTypeUtils();
-    TypeMirror serializable = getTypeMirror(Serializable.class);
-    if (typeUtils.isAssignable(type.asType(), serializable)) {
-      List<VariableElement> fields = ElementFilter.fieldsIn(type.getEnclosedElements());
-      for (VariableElement field : fields) {
-        if (field.getSimpleName().toString().equals("serialVersionUID")) {
-          Object value = field.getConstantValue();
-          if (field.getModifiers().containsAll(Arrays.asList(Modifier.STATIC, Modifier.FINAL))
-              && field.asType().getKind() == TypeKind.LONG
-              && value != null) {
-            return value + "L";
-          } else {
-            errorReporter.reportError(
-                "serialVersionUID must be a static final long compile-time constant", field);
-            break;
-          }
-        }
-      }
-    }
-    return "";
+    return typeUtils().isAssignable(type.asType(), getTypeMirror(Annotation.class));
   }
 
   private TypeMirror getTypeMirror(Class<?> c) {
     return processingEnv.getElementUtils().getTypeElement(c.getName()).asType();
   }
 
-  // The @AutoValue type, with a ? for every type.
-  // If we have @AutoValue abstract class Foo<T extends Something> then this method will return
-  // just <?>.
-  private static String wildcardTypeParametersString(TypeElement type) {
-    List<? extends TypeParameterElement> typeParameters = type.getTypeParameters();
-    if (typeParameters.isEmpty()) {
-      return "";
+  private static <E> ImmutableSet<E> immutableSetDifference(ImmutableSet<E> a, ImmutableSet<E> b) {
+    if (Collections.disjoint(a, b)) {
+      return a;
     } else {
-      return "<"
-          + Joiner.on(", ").join(
-              FluentIterable.from(typeParameters).transform(Functions.constant("?")))
-          + ">";
+      return ImmutableSet.copyOf(difference(a, b));
     }
-  }
-
-  private EclipseHack eclipseHack() {
-    return new EclipseHack(processingEnv);
   }
 }
