@@ -16,25 +16,23 @@
 package com.google.auto.value.processor;
 
 import static com.google.auto.common.MoreElements.getLocalAndInheritedMethods;
-import static com.google.common.base.Preconditions.checkState;
+import static com.google.auto.value.processor.AutoValueOrOneOfProcessor.hasAnnotationMirror;
+import static com.google.auto.value.processor.ClassNames.AUTO_VALUE_BUILDER_NAME;
+import static com.google.common.collect.Sets.immutableEnumSet;
+import static java.util.stream.Collectors.toList;
 
-import com.google.auto.common.MoreElements;
 import com.google.auto.common.MoreTypes;
-import com.google.auto.value.AutoValue;
-import com.google.auto.value.processor.AutoValueProcessor.Property;
-import com.google.common.base.Optional;
-import com.google.common.collect.FluentIterable;
+import com.google.auto.value.processor.AutoValueOrOneOfProcessor.Property;
 import com.google.common.collect.ImmutableBiMap;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
-import com.google.common.collect.Sets;
-
+import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
-
 import javax.annotation.processing.ProcessingEnvironment;
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
@@ -42,7 +40,6 @@ import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.Modifier;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.element.TypeParameterElement;
-import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.DeclaredType;
 import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
@@ -68,8 +65,8 @@ class BuilderSpec {
     this.errorReporter = errorReporter;
   }
 
-  private static final Set<ElementKind> CLASS_OR_INTERFACE =
-      Sets.immutableEnumSet(ElementKind.CLASS, ElementKind.INTERFACE);
+  private static final ImmutableSet<ElementKind> CLASS_OR_INTERFACE =
+      immutableEnumSet(ElementKind.CLASS, ElementKind.INTERFACE);
 
   /**
    * Determines if the {@code @AutoValue} class for this instance has a correct nested
@@ -77,12 +74,15 @@ class BuilderSpec {
    * {@code Optional} if so.
    */
   Optional<Builder> getBuilder() {
-    Optional<TypeElement> builderTypeElement = Optional.absent();
+    Optional<TypeElement> builderTypeElement = Optional.empty();
     for (TypeElement containedClass : ElementFilter.typesIn(autoValueClass.getEnclosedElements())) {
-      if (MoreElements.isAnnotationPresent(containedClass, AutoValue.Builder.class)) {
+      if (hasAnnotationMirror(containedClass, AUTO_VALUE_BUILDER_NAME)) {
         if (!CLASS_OR_INTERFACE.contains(containedClass.getKind())) {
           errorReporter.reportError(
               "@AutoValue.Builder can only apply to a class or an interface", containedClass);
+        } else if (!containedClass.getModifiers().contains(Modifier.STATIC)) {
+          errorReporter.reportError(
+              "@AutoValue.Builder cannot be applied to a non-static class", containedClass);
         } else if (builderTypeElement.isPresent()) {
           errorReporter.reportError(
               autoValueClass + " already has a Builder: " + builderTypeElement.get(),
@@ -96,7 +96,7 @@ class BuilderSpec {
     if (builderTypeElement.isPresent()) {
       return builderFrom(builderTypeElement.get());
     } else {
-      return Optional.absent();
+      return Optional.empty();
     }
   }
 
@@ -105,6 +105,7 @@ class BuilderSpec {
    */
   class Builder {
     private final TypeElement builderTypeElement;
+    private ImmutableSet<ExecutableElement> toBuilderMethods;
 
     Builder(TypeElement builderTypeElement) {
       this.builderTypeElement = builderTypeElement;
@@ -130,23 +131,21 @@ class BuilderSpec {
     ImmutableSet<ExecutableElement> toBuilderMethods(
         Types typeUtils, Set<ExecutableElement> abstractMethods) {
 
-      ImmutableList<String> builderTypeParamNames =
-          FluentIterable.from(builderTypeElement.getTypeParameters())
-              .transform(SimpleNameFunction.INSTANCE)
-              .toList();
+      List<String> builderTypeParamNames =
+          builderTypeElement.getTypeParameters().stream()
+              .map(e -> e.getSimpleName().toString())
+              .collect(toList());
 
       ImmutableSet.Builder<ExecutableElement> methods = ImmutableSet.builder();
       for (ExecutableElement method : abstractMethods) {
         if (builderTypeElement.equals(typeUtils.asElement(method.getReturnType()))) {
           methods.add(method);
           DeclaredType returnType = MoreTypes.asDeclared(method.getReturnType());
-          ImmutableList.Builder<String> typeArguments = ImmutableList.builder();
-          for (TypeMirror typeArgument : returnType.getTypeArguments()) {
-            if (typeArgument.getKind().equals(TypeKind.TYPEVAR)) {
-              typeArguments.add(typeUtils.asElement(typeArgument).getSimpleName().toString());
-            }
-          }
-          if (!builderTypeParamNames.equals(typeArguments.build())) {
+          List<String> typeArguments = returnType.getTypeArguments().stream()
+              .filter(t -> t.getKind().equals(TypeKind.TYPEVAR))
+              .map(t -> typeUtils.asElement(t).getSimpleName().toString())
+              .collect(toList());
+          if (!builderTypeParamNames.equals(typeArguments)) {
             errorReporter.reportError(
                 "Builder converter method should return "
                     + builderTypeElement
@@ -160,33 +159,23 @@ class BuilderSpec {
         errorReporter.reportError(
             "There can be at most one builder converter method", builderMethods.iterator().next());
       }
+      this.toBuilderMethods = builderMethods;
       return builderMethods;
-    }
-
-    Set<TypeMirror> referencedTypes() {
-      Set<TypeMirror> types = new TypeMirrorSet();
-      for (ExecutableElement method :
-          ElementFilter.methodsIn(builderTypeElement.getEnclosedElements())) {
-        types.add(method.getReturnType());
-        for (VariableElement parameter : method.getParameters()) {
-          types.add(parameter.asType());
-        }
-      }
-      return types;
     }
 
     void defineVars(
         AutoValueTemplateVars vars,
-        TypeSimplifier typeSimplifier,
         ImmutableBiMap<ExecutableElement, String> getterToPropertyName) {
       Iterable<ExecutableElement> builderMethods = abstractMethods(builderTypeElement);
+      boolean autoValueHasToBuilder = !toBuilderMethods.isEmpty();
       Optional<BuilderMethodClassifier> optionalClassifier = BuilderMethodClassifier.classify(
           builderMethods,
           errorReporter,
           processingEnv,
           autoValueClass,
           builderTypeElement,
-          getterToPropertyName);
+          getterToPropertyName,
+          autoValueHasToBuilder);
       if (!optionalClassifier.isPresent()) {
         return;
       }
@@ -207,10 +196,10 @@ class BuilderSpec {
       ExecutableElement buildMethod = Iterables.getOnlyElement(buildMethods);
       vars.builderIsInterface = builderTypeElement.getKind() == ElementKind.INTERFACE;
       vars.builderTypeName = TypeSimplifier.classNameOf(builderTypeElement);
-      vars.builderFormalTypes = typeSimplifier.formalTypeParametersString(builderTypeElement);
+      vars.builderFormalTypes = TypeEncoder.formalTypeParametersString(builderTypeElement);
       vars.builderActualTypes = TypeSimplifier.actualTypeParametersString(builderTypeElement);
-      vars.buildMethodName = buildMethod.getSimpleName().toString();
-      vars.propertiesWithBuilderGetters = classifier.propertiesWithBuilderGetters();
+      vars.buildMethod = Optional.of(new SimpleMethod(buildMethod));
+      vars.builderGetters = classifier.builderGetters();
 
       ImmutableMultimap.Builder<String, PropertySetter> setterBuilder = ImmutableMultimap.builder();
       for (Map.Entry<String, ExecutableElement> entry :
@@ -218,37 +207,69 @@ class BuilderSpec {
         String property = entry.getKey();
         ExecutableElement setter = entry.getValue();
         TypeMirror propertyType = getterToPropertyName.inverse().get(property).getReturnType();
-        setterBuilder.put(property, new PropertySetter(setter, propertyType, typeSimplifier));
+        setterBuilder.put(property, new PropertySetter(setter, propertyType));
       }
       vars.builderSetters = setterBuilder.build();
 
       vars.builderPropertyBuilders =
-          makeBuilderPropertyBuilderMap(classifier, typeSimplifier, getterToPropertyName);
+          ImmutableMap.copyOf(classifier.propertyNameToPropertyBuilder());
 
-      Set<Property> required = Sets.newLinkedHashSet(vars.props);
+      Set<Property> required = new LinkedHashSet<>(vars.props);
       for (Property property : vars.props) {
-        if (property.isNullable() || vars.builderPropertyBuilders.containsKey(property.getName())) {
+        if (property.isNullable()
+            || property.getOptional() != null
+            || vars.builderPropertyBuilders.containsKey(property.getName())) {
           required.remove(property);
         }
       }
       vars.builderRequiredProperties = ImmutableSet.copyOf(required);
     }
+  }
 
-    private ImmutableMap<String, PropertyBuilder> makeBuilderPropertyBuilderMap(
-        BuilderMethodClassifier classifier,
-        TypeSimplifier typeSimplifier,
-        ImmutableBiMap<ExecutableElement, String> getterToPropertyName) {
-      ImmutableMap.Builder<String, PropertyBuilder> map = ImmutableMap.builder();
-      for (Map.Entry<String, ExecutableElement> entry :
-          classifier.propertyNameToPropertyBuilder().entrySet()) {
-        String property = entry.getKey();
-        ExecutableElement autoValuePropertyMethod = getterToPropertyName.inverse().get(property);
-        ExecutableElement propertyBuilderMethod = entry.getValue();
-        PropertyBuilder propertyBuilder = new PropertyBuilder(
-            autoValuePropertyMethod, propertyBuilderMethod, typeSimplifier);
-        map.put(property, propertyBuilder);
-      }
-      return map.build();
+  /**
+   * Information about a builder property getter, referenced from the autovalue.vm template. A
+   * property called foo (defined by a method {@code T foo()} or {@code T getFoo()}) can have a
+   * getter method in the builder with the same name ({@code foo()} or {@code getFoo()}) and a
+   * return type of either {@code T} or {@code Optional<T>}. The {@code Optional<T>} form can be
+   * used to tell whether the property has been set. Here, {@code Optional<T>} can be either
+   * {@code java.util.Optional} or {@code com.google.common.base.Optional}. If {@code T} is {@code
+   * int}, {@code long}, or {@code double}, then instead of {@code Optional<T>} we can have {@code
+   * OptionalInt} etc. If {@code T} is a primitive type (including these ones but also the other
+   * five) then {@code Optional<T>} can be the corresponding boxed type.
+   */
+  public static class PropertyGetter {
+    private final String access;
+    private final String type;
+    private final Optionalish optional;
+
+    /**
+     * Makes a new {@code PropertyGetter} instance.
+     *
+     * @param method the source method which this getter is implementing.
+     * @param type the type that the getter returns. This is written to take imports into account,
+     *     so it might be {@code List<String>} for example. It is either identical to the type of
+     *     the corresponding getter in the {@code @AutoValue} class, or it is an optional wrapper,
+     *     like {@code Optional<List<String>>}.
+     * @param optional a representation of the {@code Optional} type that the getter returns, if
+     *     this is an optional getter, or null otherwise. An optional getter is one that returns
+     *     {@code Optional<T>} rather than {@code T}, as explained above.
+     */
+    PropertyGetter(ExecutableElement method, String type, Optionalish optional) {
+      this.access = SimpleMethod.access(method);
+      this.type = type;
+      this.optional = optional;
+    }
+
+    public String getAccess() {
+      return access;
+    }
+
+    public String getType() {
+      return type;
+    }
+
+    public Optionalish getOptional() {
+      return optional;
     }
   }
 
@@ -258,28 +279,50 @@ class BuilderSpec {
    * method {@code foo(T)} or {@code setFoo(T)} that returns the builder type. Additionally, it
    * can have a setter with a type that can be copied to {@code T} through a {@code copyOf} method;
    * for example a property {@code foo} of type {@code ImmutableSet<String>} can be set with a
-   * method {@code setFoo(Collection<String> foos)}.
+   * method {@code setFoo(Collection<String> foos)}. And, if {@code T} is {@code Optional},
+   * it can have a setter with a type that can be copied to {@code T} through {@code Optional.of}.
    */
   public class PropertySetter {
+    private final String access;
     private final String name;
     private final String parameterTypeString;
-    private final String copyFormat;
+    private final boolean primitiveParameter;
+    private final String copyOf;
 
-    public PropertySetter(
-        ExecutableElement setter, TypeMirror propertyType, TypeSimplifier typeSimplifier) {
+    public PropertySetter(ExecutableElement setter, TypeMirror propertyType) {
+      this.access = SimpleMethod.access(setter);
       this.name = setter.getSimpleName().toString();
       TypeMirror parameterType = Iterables.getOnlyElement(setter.getParameters()).asType();
-      String simplifiedParameterType = typeSimplifier.simplify(parameterType);
-      if (setter.isVarArgs()) {
-        simplifiedParameterType = simplifiedParameterType.replaceAll("\\[\\]$", "...");
-      }
-      this.parameterTypeString = simplifiedParameterType;
+      primitiveParameter = parameterType.getKind().isPrimitive();
+      this.parameterTypeString = parameterTypeString(setter, parameterType);
       Types typeUtils = processingEnv.getTypeUtils();
       TypeMirror erasedPropertyType = typeUtils.erasure(propertyType);
       boolean sameType = typeUtils.isSameType(typeUtils.erasure(parameterType), erasedPropertyType);
-      this.copyFormat = sameType
-          ? "%s"
-          : typeSimplifier.simplifyRaw(erasedPropertyType) + ".copyOf(%s)";
+      if (sameType) {
+        this.copyOf = null;
+      } else {
+        String rawTarget = TypeEncoder.encodeRaw(erasedPropertyType);
+        String of = Optionalish.isOptional(propertyType) ? "of" : "copyOf";
+        this.copyOf = rawTarget + "." + of + "(%s)";
+      }
+    }
+
+    private String parameterTypeString(ExecutableElement setter, TypeMirror parameterType) {
+      if (setter.isVarArgs()) {
+        TypeMirror componentType = MoreTypes.asArray(parameterType).getComponentType();
+        // This is a bit ugly. It's OK to annotate just the component type, because if it is
+        // say `@Nullable String` then we will end up with `@Nullable String...`. Unlike the
+        // normal array case, we can't have the situation where the array itself is annotated;
+        // you can write `String @Nullable []` to mean that, but you can't write
+        // `String @Nullable ...`.
+        return TypeEncoder.encodeWithAnnotations(componentType) + "...";
+      } else {
+        return TypeEncoder.encodeWithAnnotations(parameterType);
+      }
+    }
+
+    public String getAccess() {
+      return access;
     }
 
     public String getName() {
@@ -290,79 +333,30 @@ class BuilderSpec {
       return parameterTypeString;
     }
 
+    public boolean getPrimitiveParameter() {
+      return primitiveParameter;
+    }
+
     public String copy(AutoValueProcessor.Property property) {
-      return String.format(copyFormat, property);
-    }
-  }
-
-  /**
-   * Information about a property builder, referenced from the autovalue.vm template. A property
-   * called foo (defined by a method foo() or getFoo()) can have a property builder called
-   * fooBuilder(). The type of foo must be an immutable Guava type, like ImmutableSet, and
-   * fooBuilder() must return the corresponding builder, like ImmutableSet.Builder.
-   */
-  public class PropertyBuilder {
-    private final String builderType;
-    private final String initializer;
-    private final String copyAll;
-
-    PropertyBuilder(
-        ExecutableElement autoValuePropertyMethod,
-        ExecutableElement propertyBuilderMethod,
-        TypeSimplifier typeSimplifier) {
-      String immutableType = typeSimplifier.simplify(autoValuePropertyMethod.getReturnType());
-      int typeParamIndex = immutableType.indexOf('<');
-      checkState(typeParamIndex > 0, immutableType);
-      String rawImmutableType = immutableType.substring(0, typeParamIndex);
-      this.builderType =
-          rawImmutableType + ".Builder" + immutableType.substring(typeParamIndex);
-      this.initializer = rawImmutableType + ".builder()";
-      // TODO(emcmanus): clean up TypeSimplifier and remove this hack.
-      // We want it to simplify com.google.common.collect.ImmutableSet.Builder<E>
-      // the same way it would simplify com.google.common.collect.ImmutableSet<E>.
-      // The issue is that getEnclosingElement tends to do the wrong thing in Eclipse
-      // so we end up with ImmutableSet<E>.Builder<E>.
-      TypeElement builderTypeElement = MoreElements.asType(
-          processingEnv.getTypeUtils().asElement(propertyBuilderMethod.getReturnType()));
-      Set<String> methodNames = Sets.newHashSet();
-      for (ExecutableElement builderMethod :
-          ElementFilter.methodsIn(builderTypeElement.getEnclosedElements())) {
-        methodNames.add(builderMethod.getSimpleName().toString());
+      if (copyOf == null) {
+        return property.toString();
       }
-      if (methodNames.contains("addAll")) {
-        this.copyAll = "addAll";
-      } else if (methodNames.contains("putAll")) {
-        this.copyAll = "putAll";
-      } else {
-        throw new AssertionError("Builder contains neither addAll nor putAll: " + methodNames);
+
+      String copy = String.format(copyOf, property);
+
+      // Add a null guard only in cases where we are using copyOf and the property is @Nullable.
+      if (property.isNullable()) {
+        copy = String.format("(%s == null ? null : %s)", property, copy);
       }
-    }
 
-    /** The type of the builder, for example {@code ImmutableSet.Builder<String>}. */
-    public String getBuilderType() {
-      return builderType;
-    }
-
-    /** An initializer for the builder field, for example {@code ImmutableSet.builder()}. */
-    public String getInitializer() {
-      return initializer;
-    }
-
-    /**
-     * The method to copy another immutable collection into this one. It is {@code copyAll} for
-     * one-dimensional collections like {@code ImmutableList} and {@code ImmutableSet}, and it is
-     * {@code putAll} for two-dimensional collections like {@code ImmutableMap} and
-     * {@code ImmutableTable}.
-     */
-    public String getCopyAll() {
-      return copyAll;
+      return copy;
     }
   }
 
   /**
    * Returns a representation of the given {@code @AutoValue.Builder} class or interface. If the
    * class or interface has abstract methods that could not be part of any builder, emits error
-   * messages and returns null.
+   * messages and returns Optional.empty().
    */
   private Optional<Builder> builderFrom(TypeElement builderTypeElement) {
 
@@ -372,39 +366,39 @@ class BuilderSpec {
     // the return type of Foo<U> build() was really the same as the declaration of Foo<T>. This
     // check produces a better error message in that case and similar ones.
 
-    boolean ok = true;
-    int nTypeParameters = autoValueClass.getTypeParameters().size();
-    if (nTypeParameters != builderTypeElement.getTypeParameters().size()) {
-      ok = false;
-    } else {
-      for (int i = 0; i < nTypeParameters; i++) {
-        TypeParameterElement autoValueParam = autoValueClass.getTypeParameters().get(i);
-        TypeParameterElement builderParam = builderTypeElement.getTypeParameters().get(i);
-        if (!autoValueParam.getSimpleName().equals(builderParam.getSimpleName())) {
-          ok = false;
-          break;
-        }
-        Set<TypeMirror> autoValueBounds = new TypeMirrorSet(autoValueParam.getBounds());
-        Set<TypeMirror> builderBounds = new TypeMirrorSet(builderParam.getBounds());
-        if (!autoValueBounds.equals(builderBounds)) {
-          ok = false;
-          break;
-        }
-      }
-    }
-    if (!ok) {
+    if (!sameTypeParameters(autoValueClass, builderTypeElement)) {
       errorReporter.reportError(
           "Type parameters of " + builderTypeElement + " must have same names and bounds as "
               + "type parameters of " + autoValueClass, builderTypeElement);
-      return Optional.absent();
+      return Optional.empty();
     }
     return Optional.of(new Builder(builderTypeElement));
+  }
+
+  private static boolean sameTypeParameters(TypeElement a, TypeElement b) {
+    int nTypeParameters = a.getTypeParameters().size();
+    if (nTypeParameters != b.getTypeParameters().size()) {
+      return false;
+    }
+    for (int i = 0; i < nTypeParameters; i++) {
+      TypeParameterElement aParam = a.getTypeParameters().get(i);
+      TypeParameterElement bParam = b.getTypeParameters().get(i);
+      if (!aParam.getSimpleName().equals(bParam.getSimpleName())) {
+        return false;
+      }
+      Set<TypeMirror> autoValueBounds = new TypeMirrorSet(aParam.getBounds());
+      Set<TypeMirror> builderBounds = new TypeMirrorSet(bParam.getBounds());
+      if (!autoValueBounds.equals(builderBounds)) {
+        return false;
+      }
+    }
+    return true;
   }
 
   // Return a set of all abstract methods in the given TypeElement or inherited from ancestors.
   private Set<ExecutableElement> abstractMethods(TypeElement typeElement) {
     Set<ExecutableElement> methods = getLocalAndInheritedMethods(
-        typeElement, processingEnv.getElementUtils());
+        typeElement, processingEnv.getTypeUtils(), processingEnv.getElementUtils());
     ImmutableSet.Builder<ExecutableElement> abstractMethods = ImmutableSet.builder();
     for (ExecutableElement method : methods) {
       if (method.getModifiers().contains(Modifier.ABSTRACT)) {
